--- a/AppReservation/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AppReservation/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,9 +13,14 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <label asp-for="Input.FullName"></label>
+                <input asp-for="Input.FullName" class="form-control" />
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Class"></label>
+                <input asp-for="Input.Class" class="form-control" />
+                <span asp-validation-for="Input.Class" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
