--- a/AppReservation/Views/Reservation/Index.cshtml
+++ b/AppReservation/Views/Reservation/Index.cshtml
@@ -56,32 +56,10 @@
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        if (User.IsInRole("Student"))
-                        {
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        }
-                        else
-                        {
-                            <a hidden asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        }
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
 
-                    }
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
-                    | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        if (User.IsInRole("Admin"))
-                        {
-                            <a asp-action="Details" asp-route-id="@item.Id">Confirm</a>
-                        }
-                        else
-                        {
-                            <a hidden asp-action="Details" asp-route-id="@item.Id">Confirm</a>
-                        }
-
-                    }
                 </td>
             </tr>
         }
