--- a/AppReservation/Views/Reservation/Index.cshtml
+++ b/AppReservation/Views/Reservation/Index.cshtml
@@ -19,7 +19,11 @@
             <th>
                 @Html.DisplayNameFor(model => model.Student.FullName)
             </th>
-            
+
+            <th>
+                @Html.DisplayNameFor(model => model.Student.classe)
+            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
@@ -38,30 +42,34 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Student.FullName)
-                </td>
-                
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cause)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Reserv.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Student.FullName)
+            </td>
 
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td>
+                @Html.DisplayFor(modelItem => item.Student.classe)
+            </td>
 
-                </td>
-            </tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cause)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Reserv.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+            </td>
+        </tr>
         }
     </tbody>
 </table>
