--- a/AppReservation/Views/Shared/_Layout.cshtml
+++ b/AppReservation/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="studentreservation" asp-action="index">Student</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="index">Reservation</a>
                         </li>
                     </ul>
