--- a/AppReservation/Views/admin/Index.cshtml
+++ b/AppReservation/Views/admin/Index.cshtml
@@ -8,43 +8,47 @@
 }
 
 <h1>Index</h1>
-
-@if (Model.Any())
-{
     <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateRole"
-       asp-controller="admin">Add new role</a>
-
-    foreach (var role in Model)
+       asp-controller="admin">Add new role
+    </a>
+<div class="row">
+    @if (Model.Any())
     {
-        <div class="card mb-3">
+        
+
+        foreach (var role in Model)
+        {
+            <div class="card mb-3 m-2">
+                @*<div class="card-header">
+                        Role Id : @role.Id
+                    </div>*@
+                <div class="card-body">
+                    <h5 class="card-title">@role.Name</h5>
+                </div>
+                <div class="card-footer">
+                    <a asp-action="EditRole" asp-controller="admin" asp-route-id="@role.Id" class="btn btn-primary">Edit</a>
+                    <a href="#" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        }
+
+    }
+    else
+    {
+        <div class="card">
             <div class="card-header">
-                Role Id : @role.Id
+                No roles created yet
             </div>
             <div class="card-body">
-                <h5 class="card-title">@role.Name</h5>
-            </div>
-            <div class="card-footer">
-                <a asp-action="EditRole" asp-controller="admin" asp-route-id="@role.Id" class="btn btn-primary">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <h5 class="card-title">
+                    Use the button below to create a role
+                </h5>
+                <a class="btn btn-primary" style="width:auto"
+                   asp-controller="Admin" asp-action="CreateRole">
+                    Create Role
+                </a>
             </div>
         </div>
     }
-}
-else
-{
-    <div class="card">
-        <div class="card-header">
-            No roles created yet
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">
-                Use the button below to create a role
-            </h5>
-            <a class="btn btn-primary" style="width:auto"
-               asp-controller="Admin" asp-action="CreateRole">
-                Create Role
-            </a>
-        </div>
     </div>
-}
 
