--- a/AppReservation/Views/Reservation/Index.cshtml
+++ b/AppReservation/Views/Reservation/Index.cshtml
@@ -26,7 +26,7 @@
         if (User.IsInRole("Admin"))
         {
             <form method="post">
-                <input name="dates" type="datetime"  />
+                <input name="dates" type="date"  />
                 <input type="submit" value="submit" class="btn btn-success" />
             </form>
         }
