add view pending

--- a/AppReservation/Views/Shared/_Layout.cshtml
+++ b/AppReservation/Views/Shared/_Layout.cshtml
@@ -27,31 +27,38 @@
                         {
                             if (User.IsInRole("Admin"))
                             {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="Approuved">Approuved</a>
-                            </li>}
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="Approuved">Approuved</a>
+                    </li>
+}
+            }
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            if (User.IsInRole("Admin"))
+                            {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="Declined">Declined</a>
+                    </li>}
+                                }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            if (User.IsInRole("Admin"))
+                            {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="pending">Pending</a>
+                    </li>}
                                 }
 
                         @if (User.Identity.IsAuthenticated)
                         {
                             if (User.IsInRole("Admin"))
                             {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="Declined">Declined</a>
-                            </li>
-                            }
-                        }
-
-                                        @if (User.Identity.IsAuthenticated)
-                                        {
-                                            if (User.IsInRole("Admin"))
-                                            {
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="admin" asp-action="index">Role</a>
-                    </li>
-}
-            }
-                                                        </ul>
+                    </li>}
+                                }
+                    </ul>
                 </div>
             </div>
         </nav>
