--- a/AppReservation/Views/Reservation/Index.cshtml
+++ b/AppReservation/Views/Reservation/Index.cshtml
@@ -20,18 +20,23 @@
     }
 </p>
 
-<p>
+
     @if (User.Identity.IsAuthenticated)
     {
         if (User.IsInRole("Admin"))
         {
-            <form method="post">
-                <input name="dates" type="date"  />
+    <form method="post">
+        <div class="input-group mb-3">
+            <input name="dates" type="date" />
+            <div class="input-group-append">
                 <input type="submit" value="submit" class="btn btn-success" />
-            </form>
+            </div>
+       </div>
+
+    </form>
         }
     }
-</p>
+
 
 
 <table class="table table-striped table-bordered table-hover">
@@ -94,20 +99,25 @@
                     }
                     else if (User.IsInRole("Admin"))
                     {
-
+                    <div class="input-group mb-3">
                         <a class="btn btn-primary" asp-action="Confirm" asp-route-id="@item.Id">Confirm</a>
-                        <a class="btn btn-danger" asp-action="Decline" asp-route-id="@item.Id">Decline</a>
-                    }
-                    else
-                    {
-                        <a hidden class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a hidden class="btn btn-primary" asp-action="Confirm" asp-route-id="@item.Id">Confirm</a>
-                        <a hidden class="btn btn-danger" asp-action="Decline" asp-route-id="@item.Id">Decline</a>
-                    }
+                        <div class="input-group-append">
+                            <a class="btn btn-danger" asp-action="Decline" asp-route-id="@item.Id">Decline</a>
+                        </div>
+                
+                    </div>
+                
+                }
+                else
+                {
+                <a hidden class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a hidden class="btn btn-primary" asp-action="Confirm" asp-route-id="@item.Id">Confirm</a>
+                <a hidden class="btn btn-danger" asp-action="Decline" asp-route-id="@item.Id">Decline</a>
+                }
 
                 }
-               
-            </td>
+
+</td>
         </tr>
         }
     </tbody>
