--- a/AppReservation/Views/Reservation/Index.cshtml
+++ b/AppReservation/Views/Reservation/Index.cshtml
@@ -2,13 +2,13 @@
 @using Microsoft.AspNetCore.Identity
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reservations";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var usr = new IdentityUser();
     var role = new IdentityRole();
 }
 
-<h1>Index</h1>
+<h1 class="text-center">Reservation</h1>
 
 <p>
     @if (User.Identity.IsAuthenticated)
