--- a/AppReservation/Views/Shared/_Layout.cshtml
+++ b/AppReservation/Views/Shared/_Layout.cshtml
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AppReservation</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    @*<link rel="stylesheet" href="~/css/site.css" />*@
     <link rel="stylesheet" href="~/css/Style.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/Style.css" />
     <link rel="stylesheet" href="~/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/Style.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppReservation</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span style="color: blue;font-family:fantasy">App</span><span style="color: brown;
+        font-family: fantasy">Reservation</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,9 +26,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="index">Reservation</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="filtre">filtre</a>
-                        </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="reservation" asp-action="filtre">filtre</a>
+                            </li>
+                            }
+                        }
                         @if (User.Identity.IsAuthenticated)
                         {
                             if (User.IsInRole("Admin"))
@@ -66,6 +74,14 @@
                             }
                         }
                     </ul>
+                    
+                    <div class="d-flex justify-content-center h-100">
+                        <div class="searchbar">
+                            <input class="search_input" type="text" name="" placeholder="Search...">
+                            <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </nav>
@@ -77,26 +93,24 @@
                     
                 </div>
 
-            </div>
-        </nav>
+        
 
         <!-- Page Content  -->
-        <div id="content" class="px-md-5">
+        <div id="content" class="px-md-5" >
             <div id="content">
                 <main role="main" class="pb-3">
                     @RenderBody()
                 </main>
             </div>
         </div>
-    </div>
-        
+ 
         
    
 
 
         
 
-    <footer class="border-top footer text-muted bg-info text-center">
+    <footer class="border-top footer text-muted bg-info text-center" style="min-height: 100%;">
         <div class="container">
             &copy; 2021 - AppReservation - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
