--- a/AppReservation/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AppReservation/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,14 +5,17 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
+@*<h1>@ViewData["Title"]</h1>*@
+
+@*-----------------------*@
+    <div class="row">
+        <div class="col-sm-4 text-center abc">
+            <!-- Default form login -->
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
+                <p class="h4 mb-4 text-left">Login to continue</p>
+                <p class="text-left">Signin to create, discover and connect with the global community</p> <!-- Email -->
+                @*<label for="mail" class="in">Username</label>
+        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Enter Username">*@ <!-- Password -->
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
@@ -23,62 +26,32 @@
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                <div class="d-flex justify-content-left">
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="Input.RememberMe">
+                                <input asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                        </div>
                     </div>
                 </div>
+                <!-- Sign in button -->
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
             </form>
-        </section>
+        </div>
+        <div class="col-sm-8 xyz text-center" style="background-image: url(https://i.imgur.com/6YuRxJA.png)">
+            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>
+            <h2 class="account-text">Create Your Account</h2>
+            <h4 class="account-description">Signup to create, discover and connect with the global community</h4> 
+            <a class="nav-link text-dark btn btn-info btn-block sign" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </div>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+@*-----------------------*@
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
