--- a/AppReservation/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AppReservation/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>*@
 
+@*-----------------------*@
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-sm-4 text-center abc">
+        <!-- Default form login -->
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
@@ -40,37 +42,15 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+    <div class="col-sm-8 xyz text-center" style="background-image: url(https://i.imgur.com/6YuRxJA.png)">
+        <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>
+        <h2 class="account-text">Create Your Account</h2>
+        <h4 class="account-description">Signup to create, discover and connect with the global community</h4>
+        <a class="nav-link text-dark btn btn-info btn-block sign" style="margin-top: 100px" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </div>
 </div>
+@*-----------------------*@
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
