--- a/AppReservation/Views/Reservation/Create.cshtml
+++ b/AppReservation/Views/Reservation/Create.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" value="2018-07-22" class="form-control"/>
+                <input asp-for="Date" type="date" class="form-control"/>
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group" hidden>
